--- a/index.html
+++ b/index.html
@@ -1,19 +1,224 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>KOAM</title>
-        <link rel=”stylesheet” href=”reset.css”>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header class="cabeçalho">
-            <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="img/K-removebg-preview.png" alt="Logo do KOAM">
-            <a href="#"><img src="img/favs.png" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/carrinho.png"alt="Carrinho de compras"></a>
-        <a href="#"><img src="img/user.png"alt="Meu perfil"></a>
-        </header>
-    </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AluraBooks</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header class="cabeçalho">
+    <div class="container">
+      <input type="checkbox" id="menu" class="container__botao">
+      <label for="menu">
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+      </label>
+      <ul class="lista-menu">
+        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Programação</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Front-end</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Business</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Design & UX</a>
+        </li>
+      </ul>
+      <img src="img/logo.png" width="35px" alt="Logo da KOAM" class="container__imagem">
+    </div>
+    <div class="container">
+      <a href="#"><img src="img/favs.png" width="35px" alt="Favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/carrinho.png" width="35px" alt="Carrinho" class="container__imagem"></a>
+      <a href="#"><img src="img/perfil.png" width="35px" alt="Meu perfil" class="container__imagem"></a>
+    </div>
+  </header>
+
+  <section class="banner">
+    <h2 class="banner__titulo">Já sabe para onde quer ir?</h2>
+    <p class="banner__texto">Encontre em nosso site as melhores promoções e destinos!</p>
+    <input type="search" class="banner__pesquisa" placeholder="Qual sera seu proximo destino">
+  </section>
+
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">Os favoritos da galera</h2>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="img/orlando.png"
+            alt="O destino mais procurado por todos, partiu orlando?"></div>
+        <div class="swiper-slide"><img src="img/londres.png"
+            alt="Que horas vai ser o cha da tarde? o rei te espera la"></div>
+        <div class="swiper-slide"><img src="img/chile.png" alt="Ta afim de um friozinho ou da ilha de pascoa?">
+        </div>
+        <div class="swiper-slide">
+          <img src="img/angola.png" alt="Um destino pouco conhecido" />
+        </div>
+        <div class="swiper-slide">
+          <img src="img/suica.png" alt="Os melhores chocolates" />
+        </div>
+        <div class="swiper-slide">
+          <img src="img/canada.png" alt="Panquecas com sirup pro cafe da manha?" />
+        </div>
+      </div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+    </div>
+
+    <div class="card">
+      <div class="card__descrição">
+        <div class="descrição">
+          <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descrição__titulo-livro">Cancun e Havai</h2>
+          <p class="descrição__texto">
+            Os melhores lugares para quem busca uma boa praia e um descanso para a mente
+          </p>
+        </div>
+        <img src="img/cancun.png" width="80px" class="descrição__imagem" />
+      </div>
+      <div class="card__botões">
+        <ul class="botões">
+          <li class="botões__item">
+            <img src="img/favs.png" width="35px" alt="Favoritar livro" />
+          </li>
+          <li class="botões__item">
+            <img src="img/carrinho.png" width="35px" alt="Adicionar no carrinho de compras" />
+          </li>
+        </ul>
+        <a href="#" class="botões__ancora">Saiba mais</a>
+      </div>
+    </div>
+
+  </section>
+
+  <section class=”carrossel”>
+    <h2 class="carrossel__titulo">Promocionais</h2>
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="img/canada.png"
+            alt="Panquecas com sirup para o cafe da manha?"></div>
+        <div class="swiper-slide"><img src="img/angola.png" alt="pode nao ser tao conhecido porem tem um otimo potencial">
+        </div>
+        <div class="swiper-slide"><img src="img/suica.png" alt="O melhor chocolate do mundo">
+        </div>
+        <div class="swiper-slide"><img src="img/orlando.png" alt="O mais procurado"></div>
+        <div class="swiper-slide"><img src="img/londres.png" alt="Que horas e o cha"></div>
+        <div class="swiper-slide"><img src="img/chile.png" alt="Bom e pertinho"></div>
+      </div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+
+    <div class="card">
+      <!-- 1º linha -->
+      <div class="card__descrição">
+        <!-- 1º coluna -->
+        <div class="descrição">
+          <img src="img/estrela.png" alt="Avaliação 5 estrelas">
+          <h3 class="descrição__titulo">destino do mês</h3>
+          <h2 class="descrição__titulo-livro">chile</h2>
+          <p class="descrição__texto">Ta afim de um friozinho ou da ilha de pascoa?
+          </p>
+        </div>
+        <!-- 2º coluna -->
+        <img src="img/bandeira.png" class="descrição__imagem">
+      </div>
+
+      <!-- 2º linha -->
+      <div class="card__botões">
+        <!-- 1º coluna -->
+        <ul class="botões">
+          <li class="botões__item"><img src="img/favs.png" width="35px" alt="Favoritar livro"></li>
+          <li class="botões__item"><img src="img/carrinho.png" width="35px" alt="Adicionar no carrinho de compras"></li>
+        </ul>
+        <!-- 2º coluna -->
+        <a href="#" class="botões__ancora">Saiba mais</a>
+      </div>
+    </div>
+
+
+
+  </section>
+
+  <section class="tópicos">
+    <h2 class="tópicos__titulo">DESTINOS PESQUISADOS RECENTEMENTE</h2>
+    <ul class="tópicos__lista">
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Finlandia</a></li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Marrocos</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Argentina</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Singapura</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Holanda</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Paris</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Bora bora</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Uruguai</a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="contato">
+    <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+    <p class="contato__texto">
+      Toda semana novas promoções relampagos aparecem, planege com calma e tempo.
+    </p>
+    <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" />
+  </section>
+
+  <hr />
+
+  <footer class="rodapé">
+    <h2 class="rodapé__titulo">Grupo KOAM a sua disponibilização</h2>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new Swiper(".swiper", {
+      spaceBetween: 10,
+      slidesPerView: 3,
+      pagination: {
+        el: ".swiper-pagination",
+        type: "bullets",
+      },
+    });
+  </script>
+</body>
+
 </html>
+
